trying to fix background image on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -204,6 +204,9 @@ header {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     /*Linear gradient makes image darker for text visibility*/
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     /*Make img not zoomed in*/
     background-position: center;
